--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
-Add the TcpASIOReader
-Finish the TcpASIOWriter
+Test the TcpASIOReader
+Test the TcpASIOWriter
 Add mutex to the Singleton (for multi-threading)
